tests/ui/manual_selective.stderr
error[E0277]: the trait bound `Manual: validator::Selective` is not satisfied
  --> tests/ui/manual_selective.rs:12:30
   |
12 |     Validator::new().partial(&Manual, ["field"]).unwrap();
   |                      ------- ^^^^^^^ unsatisfied trait bound
   |                      |
   |                      required by a bound introduced by this call
   |
help: the trait `validator::Selective` is not implemented for `Manual`
  --> tests/ui/manual_selective.rs:3:1
   |
 3 | struct Manual;
   | ^^^^^^^^^^^^^
note: required by a bound in `Validator::partial`
  --> src/lib.rs
   |
   |     pub fn partial<T, I, S>(&self, value: &T, fields: I) -> Result<(), Error>
   |            ------- required by a bound in this associated function
   |     where
   |         T: Validate + Selective,
   |                       ^^^^^^^^^ required by this bound in `Validator::partial`
